[package]
name = "aberp-billing"
description = "Billing module — NAV invoice issuing (ADR-0009)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

# Per ADR-0021 Part A item 2: library crates use thiserror, not anyhow.
[dependencies]
duckdb = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
