[package]
name = "aberp-billing"
description = "Billing module — NAV invoice issuing (ADR-0009)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

# Per ADR-0021 Part A item 2: library crates use thiserror, not anyhow.
[dependencies]
duckdb = { workspace = true }
# PR-44γ — first arithmetic consumer of `rust_decimal` per A135's
# "deferred-to-arithmetic-consumer" trigger. Round-half-even HUF
# conversion per ADR-0037 §1.c + C11 lives in `domain::money`.
rust_decimal = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
# PR-44α — Currency wire-shape pin test reads
# `serde_json::to_value(Currency::*)` to assert the ISO 4217 string emit
# per ADR-0037 §3 (`currency_wire_shape_pins_iso_4217_strings`). Mirrors
# the dev-only `serde_json` use in `apps/aberp/src/serve.rs`'s
# `ack_status_wire_shape_pins_uppercase_strings`.
serde_json = { workspace = true }
